JEAP-5455: Integrate GroupView in UI JEAP-5457: Add Error Group Detail View Update version/date in publiccode.yml